--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "gh-pages": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "npm build && gh-pages -d build"
+    "deploy": "yarn build && gh-pages -d build"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
@@ -27,7 +28,6 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "gh-pages": "^2.0.0"
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
