--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "gh-pages": "^2.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "yarn build && gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "gh-pages": "^2.0.0"
   }
 }
