--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vmirella.github.io/lim-2018-01-social-network-frameworks",
+  "homepage": "https://vmirella.github.io/lim-2018-01-social-network-frameworks/",
   "name": "lim-2018-01-social-network-frameworks",
   "version": "0.1.0",
   "private": true,
@@ -9,8 +9,7 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
-    "gh-pages": "^2.0.0"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "predeploy": "npm run build",
